<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.prelimtek.android.picha.ImagesModel"/>
        <variable name="imagesModel" type="com.prelimtek.android.picha.ImagesModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        android:scrollIndicators="right"
        android:id="@+id/imageHandlerLinearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Load Photo image"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/holo_orange_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textImageActionDetails"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@android:color/white"
            android:id="@+id/textImageActionLinearLayout"
            android:layout_below="@+id/textImageActionDetails">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_gravity="top"
                        android:layout_marginHorizontal="10dp"
                        android:orientation="horizontal">

                        <com.prelimtek.android.customcomponents.view.CustomImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/btn_layout_margin"
                            android:tooltipText="@string/photo_images_tooltip"
                            app:imageSrc="@drawable/camera_30"
                            app:text="@string/photo"
                            android:id="@+id/take_a_photo_button"
                            />


                        <com.prelimtek.android.customcomponents.view.CustomImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/btn_layout_margin"
                            android:tooltipText="@string/external_images_tooltip"
                            app:imageSrc="@drawable/micro_sd_40"
                            app:text="@string/external"
                            android:id="@+id/external_photo_button"
                            />

                        <com.prelimtek.android.customcomponents.view.CustomImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/btn_layout_margin"
                            android:tooltipText="@string/gallery_images_tooltip"
                            app:imageSrc="@drawable/film_roll_40"
                            app:text="@string/gallery"
                            android:id="@+id/gallery_photo_button"
                            />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:id="@+id/image_list_fragment">
                    </FrameLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">




                            <com.prelimtek.android.customcomponents.view.CustomImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_marginHorizontal="@dimen/custom_btn_horizontal_margin"
                                android:tooltipText="@string/save_close_btn_tooltip"
                                app:imageSrc="@drawable/save_close_24"
                                app:text="@string/save_close"
                                android:id="@+id/update_images_Btn"
                                />



                            <com.prelimtek.android.customcomponents.view.CustomImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginHorizontal="@dimen/custom_btn_horizontal_margin"
                                android:tooltipText="@string/cancel"
                                app:imageSrc="@drawable/trash"
                                app:text="@string/cancel"
                                android:id="@+id/cancel_images_edit_Btn"
                                />



                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>


</layout>