<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="java.lang.String"/>
        <import type="io.mtini.model.TenantModel"/>
        <import type="com.prelimtek.android.customcomponents.view.TelephoneActionAdapter"/>
        <variable name="tenant" type="TenantModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/tenantShowDetailsRelativeLayout"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@android:color/white"
            android:id="@+id/tenantShowDetailsLinearLayout"
            android:layout_below="@+id/textShowTenantDetails">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/pagetop_image_layout_height"
                android:contentDescription="@string/app_name"
                android:src="@drawable/tenant"
                android:layout_margin="@dimen/page_icon_margin"
                android:id="@+id/tenantImage"
                android:layout_below="@+id/textShowTenantDetails"/>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/table_padding">

                        <TableRow android:padding="@dimen/table_row_padding">
                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:id="@+id/edit_tenant_error"
                                />
                        </TableRow>

                        <TableRow android:padding="@dimen/table_row_padding">
                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Name:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{tenant.name}" />

                        </TableRow>
                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Room:" />


                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{tenant.buildingNumber}" />

                        </TableRow>
                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Scheduled Rent:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:currencyValue="@{tenant.rentDue}"
                                app:currencyCode="@{tenant.currency}" />

                        </TableRow>

                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Schedule:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(tenant.paySchedule)}" />

                        </TableRow>

                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Status:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(tenant.status)}" />

                        </TableRow>
                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Balance:" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:currencyValue="@{tenant.balance}"
                                app:currencyCode="@{tenant.currency}"/>

                                <com.prelimtek.android.customcomponents.view.CustomImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="@dimen/custom_btn_layout_height"
                                    android:layout_marginHorizontal="@dimen/custom_btn_horizontal_margin"
                                    android:gravity="center"
                                    android:tooltipText="@string/edit_tenant_payments_button_tooltip"
                                    app:imageSrc="@drawable/money"
                                    app:text="@string/update_payments"
                                    android:id="@+id/edit_tenant_payments_button"
                                    />

                            </LinearLayout>
                        </TableRow>
                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Pay Due Date:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:bindDate="@={tenant.dueDate}"/>

                        </TableRow>
                        <TableRow android:padding="@dimen/table_row_padding">

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Contacts:" />

                            <TextView android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{tenant.contacts}"
                                android:onClick="@{(v) -> TelephoneActionAdapter.onClickTelephoneAction(v,tenant.contacts)}"
                                />

                        </TableRow>

                    </TableLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >



                            <com.prelimtek.android.customcomponents.view.CustomImageButton
                                android:layout_width="@dimen/custom_btn_layout_height"
                                android:layout_height="wrap_content"

                                android:layout_alignParentLeft="true"
                                android:layout_marginHorizontal="@dimen/custom_btn_horizontal_margin"
                                android:gravity="center"
                                android:tooltipText="@string/edit_tenant_btn_tooltip"
                                app:imageSrc="@drawable/edit_pencil"
                                app:text="@string/edit"
                                android:id="@+id/editTenantBtn"
                                />



                            <com.prelimtek.android.customcomponents.view.CustomImageButton
                                android:layout_width="@dimen/custom_btn_layout_height"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginHorizontal="@dimen/custom_btn_horizontal_margin"
                                android:gravity="center"
                                android:tooltipText="@string/delete_tenant_btn_tooltip"
                                app:imageSrc="@drawable/trash"
                                app:text="@string/delete"
                                android:id="@+id/deleteTenantBtn"
                                />



                    </RelativeLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="true"
                        android:id="@+id/image_list_fragment">

                    </FrameLayout>

                    <com.prelimtek.android.customcomponents.view.CustomImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/btn_layout_margin"
                        android:tooltipText="@string/edit_tenant_images_btn_tooltip"
                        app:imageSrc="@drawable/edit_image_color_40"
                        app:text="@string/edit_images"
                        android:id="@+id/edit_tenant_images_button"
                        />
                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</layout>