<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.prelimtek.android.customcomponents.view.CustomAppVersionTextRelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="right"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addBtnLinearLayout"
        android:layout_below="@+id/header"
        android:orientation="horizontal">

        <com.prelimtek.android.customcomponents.view.CustomImageButton
            android:id="@+id/add_tenant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/fab_margin"
            android:tooltipText="@string/add_tenant_btn_tooltip"
            app:imageSrc="drawable/add_person_group_40"
            app:text="@string/add_tenant"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tenant List"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/holo_orange_dark"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textEstateCount" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:tooltipText="@string/total_estate_balance"
            android:id="@+id/list_balance_txt_view"/>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_tenant_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addBtnLinearLayout">

        <ListView
            android:orientation="vertical"
            android:id="@+id/fragment_tenant_list_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_tenant_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addBtnLinearLayout"
        tools:layout="@layout/tenant_detail_layout">
    </FrameLayout>

</RelativeLayout>


